
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-10-26 MH  1.10.0 Add a 'Blocked By' column to the Server Status dialog
                      to show if a transaction is blocked by another process.
2007-10-26 DP  1.8.1  Properly escape _'s in queries for schemas, per Derek
                      Fonda.
2007-10-26 DP  1.8.1  Don't try to enable/disable prepared transaction related
                      controls on pre-8.1 servers, per Karl Zellnig
2007-10-12 DP  1.8.0  Avoid using a correlated subquery that Greenplum doesn't
                      support, per report from Jon Roberts.
2007-09-24 DP  1.8.0  Allow GUCs to be set on functions in PostgreSQL 8.3 and
                      above. [Guillaume Lelarge]
2007-09-24 DP  1.8.0  Allow GUCs to be set on users, roles and databases at
                      create time.
2007-09-03 DP  1.8.0  Fix the table, index and index constraint tablespace
                      property combo boxes to allow changes to tablespace.
2007-09-03 DP  1.8.0  Modify the object browser so that the expanded/collapsed
                      state of child nodes is retained when a node is 
                      refreshed.
2007-07-19 DP  1.8.0  Refactor the Query Tool's execQuery function to prevent
                      pgAdmin freezing while two long running queries are 
                      executing simultaneously.
2007-07-05 HS  1.8.0  Fixed UTF8 option was not effective by file reading and
                      writing of a query. and fixed crash at the time of file
                      save. Per report from Claudia.
2007-07-02 DP  1.8.0  Add an option to the Report Tool to open the output file