@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-10-26 DP  1.10.0 Handle the corner case when a user includes quotes in an
+                      object name.
 2007-10-26 MH  1.10.0 Add a 'Blocked By' column to the Server Status dialog
                       to show if a transaction is blocked by another process.
 2007-10-26 DP  1.8.1  Properly escape _'s in queries for schemas, per Derek
